<resources>
    <string name="app_name">Exposure</string>
    <string name="title_activity_maps">Exposure</string>
    <string name="title_data_driver">Database Manager Demo</string>
    <string name="app_id">1762527073968719</string>string>
    <string name="google_app_id">1084709751783</string>string>

    <string name="title_activity_list">ListActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile_view">ProfileViewActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="target_upload_photo">target upload photo</string>
    <string name="title_activity_post_view">PostViewActivity</string>

    <string name="title_activity_location_view">LocationViewActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="search">Search Exposure</string>
    <string name="button_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="button_maps">Map</string>
    <string name="button_post">Post</string>
    <string name="button_profile">Profile</string>
    <string name="button_list">ListView</string>
    <string name="button_apply_filter">Apply Filter</string>

    <!-- Strings for the spinner on maps -->
    <string-array name="maps_filter_spinner">
        <item>All</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Driving</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Outdoors</item>
        <item>Scenic</item>
        <item>Landscape</item>
        <item>Mountains</item>
        <item>Water</item>
        <item>Forest</item>
        <item>NONE</item>
    </string-array>
    <string name="title_activity_list_view">ListView</string>
    <string name="button_list_search">Search/Apply Filter</string>
</resources>