<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".maps.ExposureListView"
    tools:showIn="@layout/activity_list_view">


    <EditText android:id="@+id/search_exposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2"
        android:layout_above="@+id/map" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list_search"
        android:onClick="searchList"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/Filters_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:background="#cbcbcb"
        android:elevation="@android:dimen/app_icon_size"
        android:layout_below="@+id/search_exposure"
        android:layout_alignEnd="@+id/button2"
        android:layout_toEndOf="@+id/search_exposure"> </Spinner>

    <!-- 3 buttons at the bottom -->
    <LinearLayout
        android:id="@+id/viewSwitchers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_maps"
            android:onClick="launchMapView"
            android:layout_weight="1"
            android:id="@+id/button3" />

        <!-- open post view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_post"
            android:onClick="io.launchPostView"
            android:layout_weight="1"
            android:id="@+id/button4" />

        <!-- open profile view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_profile"
            android:onClick="launchProfileView"
            android:layout_weight="1"
            android:id="@+id/button5" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/viewSwitchers"
        android:layout_below="@+id/Filters_spinner" />

</RelativeLayout>
