<!--
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exposure.getExposure.MapsActivity2" />
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <!--tools:showIn="@layout/activity_maps2"-->

    <EditText android:id="@+id/search_exposure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2"
        android:layout_above="@+id/map" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:onClick="search"
        android:id="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="exposure.getExposure.MapsActivity"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_above="@+id/mapToolBar" />

    <LinearLayout
        android:id="@+id/mapToolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:weightSum="3">

        <!-- open itself -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_list"
            android:onClick="launchListView"
            android:layout_weight="1"
            android:id="@+id/button3" />

        <!-- open post view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_post"
            android:onClick="launchPostView"
            android:layout_weight="1"
            android:id="@+id/button4" />

        <!-- open profile view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_profile"
            android:onClick="launchProfileView"
            android:layout_weight="1"
            android:id="@+id/button5" />
    </LinearLayout>



</RelativeLayout>