<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".profile.LoginActivity"
    android:weightSum="1">


    <!-- 3 buttons at the bottom -->

    <LinearLayout
        android:id="@+id/mapToolBar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:weightSum="3"
        android:gravity="top|bottom|center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_maps"
            android:onClick="launchMapView"
            android:layout_weight="1"
            android:id="@+id/button3" />

        <!-- open post view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_post"
            android:onClick="launchPostView"
            android:layout_weight="1"
            android:id="@+id/button4" />

        <!-- open profile view -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_profile"
            android:onClick="launchProfileView"
            android:layout_weight="1"
            android:id="@+id/button5" />
    </LinearLayout>

</RelativeLayout>