<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="io.github.getExposure.PostViewActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <include layout="@layout/content_post_view" />

        <!-- 3 buttons at the bottom -->
        <LinearLayout
            android:id="@+id/viewSwitchers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:weightSum="3">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_maps"
                android:onClick="launchMapView"
                android:layout_weight="1"
                android:id="@+id/button3" />

            <!-- open post view -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_post"
                android:onClick="launchPostView"
                android:layout_weight="1"
                android:id="@+id/button4" />

            <!-- open profile view -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_profile"
                android:onClick="launchProfileView"
                android:layout_weight="1"
                android:id="@+id/button5" />
        </LinearLayout>

    </RelativeLayout>






</android.support.design.widget.CoordinatorLayout>
